** 1.4.0 released on 2005-12-30

2005-12-29  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: keyboard joysticks:
  - removed secondary trigger key
  - added functions that list currently assigned keyboard joystick keys (for
    use in the UI to show user how the joystick is mapped)
  - SDL_X_TRIG renamed to SDL_JOY_X_TRIGGER (old config name still supported)
  - SDL_JOY_X_ENABLED added to config file (so you can enable/disable
    the keyboard joysticks and save that for future)

* ui.c: SDL keyboard joysticks: show how the joystick keys are mapped

* config.{guess, sub}: updated to versions from August 2005

* atari800.man: added -Hpath <path>

* DOC/FAQ: listed my solutions for keyboard joysticks and sound problems
  under SDL with GNOME ESD.

* atari800.spec, README.1ST, DOC/{README, NEWS}: updated for new release


2005-12-29  Piotr Fusik  <fox@scene.pl>
* ui_basic.c: help line for the directory selector


2005-12-28  Petr Stehlik  <pstehlik@sophics.cz>
* sound_oss.c: handles situations when Pokey generated channels don't match
  the output channels - for example when stereo Pokey is to play on mono only
  card, or vice-versa. Also stereo Pokey compiled in but disabled at runtime
  now plays from both channels (not just the left one).


2005-12-27  Piotr Fusik  <fox@scene.pl>
* DOC/INSTALL.amiga: removed (completely obsolete)

* DOC/TODO: reorganized and added my ideas

* pokey.c: made initialization of poly17_lookup[] about 10 times faster


2005-12-05  Piotr Fusik  <fox@scene.pl>
* atari_ps2.c: sound support for the PS2


2005-11-30  Piotr Skamruk  <jellonek@knip.pol.lublin.pl>
* ui.c: options for enabling/disabling SDL keyboard joysticks


2005-11-26  Piotr Fusik  <fox@scene.pl>
* atari.c: fixed Atari_time() on the PS2

* atari.c: applied patch for *argc==0 (Chris)

* ui_basic.c: minor fix in FileSelector()


2005-11-24  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: keyboard joysticks don't pause games anymore. However, a