@@ -59,9 +59,12 @@
 #include <stdio.h>
 #include <stdlib.h>	/* exit() */
 
+#include "cpu.h"
+#ifdef ASAP /* external project, see http://asap.sf.net */
+#include "asap_internal.h"
+#else
 #include "antic.h"
 #include "atari.h"
-#include "cpu.h"
 #include "memory.h"
 #include "monitor.h"
 #ifndef BASIC
@@ -70,6 +73,7 @@
 #include "ui.h"
 #endif
 #endif /* BASIC */
+#endif /* ASAP */
 
 #ifdef FALCON_CPUASM
 
@@ -2148,6 +2152,13 @@ void GO(int limit)
 		ABSOLUTE_X;
 		goto ins;
 
+#ifdef ASAP
+
+	OPCODE_ALIAS(d2)
+	OPCODE_ALIAS(f2)
+
+#else
+
 	OPCODE(d2)				/* ESCRTS #ab (CIM) - on Atari is here instruction CIM [unofficial] !RS! */
 		data = IMMEDIATE;
 		UPDATE_GLOBAL_REGS;
@@ -2173,6 +2184,8 @@ void GO(int limit)
 		UPDATE_LOCAL_REGS;
 		DONE
 
+#endif /* ASAP */
+
 	OPCODE_ALIAS(02)		/* CIM [unofficial - crash intermediate] */
 	OPCODE_ALIAS(12)
 	OPCODE_ALIAS(22)
@@ -2183,6 +2196,14 @@ void GO(int limit)
 	OPCODE_ALIAS(72)
 	OPCODE_ALIAS(92)
 	OPCODE(b2)
+
+#ifdef ASAP
+
+		ASAP_CIM();
+		DONE
+
+#else
+
 	/* OPCODE(d2) Used for ESCRTS #ab (CIM) */
 	/* OPCODE(f2) Used for ESC #ab (CIM) */
 		PC--;
@@ -2202,6 +2223,8 @@ void GO(int limit)
 		CPU_PutStatus();
 		UPDATE_LOCAL_REGS;
 		DONE
+
+#endif /* ASAP */
 
 /* ---------------------------------------------- */
 /* ADC and SBC routines */
@@ -2332,7 +2355,7 @@ void CPU_Reset(void)
 	regPC = dGetWordAligned(0xfffc);
 }
 
-#ifndef BASIC
+#if !defined(BASIC) && !defined(ASAP)
 
 void CpuStateSave(UBYTE SaveVerbose)
 {
